--- a/package.json
+++ b/package.json
@@ -20,17 +20,17 @@
     "nodemon": "^2.0.4"
   },
   "devDependencies": {
-    "email-validator": "^2.0.4",
     "chalk": "^4.1.0",
-    "dotenv": "^8.2.0",
-    "html-validate": "^3.0.0",
-    "recursive-readdir": "^2.2.2",
     "cypress": "^4.12.1",
     "cypress-html-validate": "^1.2.2",
     "cypress-wait-until": "^1.7.1",
+    "dotenv": "^8.2.0",
+    "email-validator": "^2.0.4",
     "eslint": "^7.4.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-cypress": "^2.11.1",
-    "eslint-plugin-import": "^2.22.0"
+    "eslint-plugin-import": "^2.22.0",
+    "html-validate": "^3.0.0",
+    "recursive-readdir": "^2.2.2"
   }
 }
