--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "node-fetch": "^2.6.0",
-    "nodemon": "^2.0.4"
+    "node-fetch": "^2.6.1",
+    "nodemon": "^2.0.4",
+    "server": "^1.0.30"
   },
   "devDependencies": {
     "chalk": "^4.1.0",
